--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   rxdart: ^0.27.3
   android_alarm_manager: ^2.0.2
   collection: ^1.15.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
